# directory-stream

./: LICENSE  directory-stream.cabal  stack.yaml
src/System/Posix/Directory/: Stream.hs
tests/: test.hs
